nes-systests/systest/tests/testdata/errors/result/ResultEmptyButExpectedIsNot.dummy
Source stream UINT64 id
1

SINK CORRECT_SINK UINT64 stream$id
SELECT id FROM stream WHERE id > UINT64(1) INTO CORRECT_SINK
----


SINK INCORRECT_SINK UINT64 stream$id
SELECT id FROM stream WHERE id > UINT64(1) INTO INCORRECT_SINK
----
1
